@@ -2,8 +2,6 @@ package com.mikosik.stork.compile.link;
 
 import static com.mikosik.stork.common.Collections.filter;
 import static com.mikosik.stork.common.Collections.flatten;
-import static com.mikosik.stork.common.Sequence.sequence;
-import static com.mikosik.stork.common.Sequence.toSequence;
 import static com.mikosik.stork.model.change.Changes.walk;
 import static com.mikosik.stork.problem.ProblemException.report;
 import static com.mikosik.stork.problem.compile.link.UndefinedImport.undefinedImport;
@@ -11,7 +9,6 @@ import static com.mikosik.stork.problem.compile.link.UndefinedVariable.undefined
 import static java.util.function.Function.identity;
 import static java.util.stream.Collectors.counting;
 import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toSet;
 
 import java.util.List;
@@ -19,28 +16,28 @@ import java.util.List;
 import com.mikosik.stork.model.Identifier;
 import com.mikosik.stork.model.Module;
 import com.mikosik.stork.model.Variable;
+import com.mikosik.stork.problem.compile.link.CannotLink;
 import com.mikosik.stork.problem.compile.link.DuplicatedDefinition;
-import com.mikosik.stork.problem.compile.link.UndefinedImport;
-import com.mikosik.stork.problem.compile.link.UndefinedVariable;
 
 public class VerifyModule {
   public static Module verify(Module module) {
-    report(flatten(sequence(
+    report(flatten(List.of(
         undefinedVariables(module),
         undefinedIdentifiers(module),
         duplicatedDefinitions(module))));
     return module;
   }
 
-  private static List<UndefinedVariable> undefinedVariables(Module module) {
+  private static List<CannotLink> undefinedVariables(Module module) {
     return module.definitions.stream()
         .flatMap(definition -> walk(definition.body)
             .flatMap(filter(Variable.class))
             .map(variable -> undefinedVariable(definition, variable)))
-        .collect(toList());
+        .map(problem -> (CannotLink) problem)
+        .toList();
   }
 
-  private static List<UndefinedImport> undefinedIdentifiers(Module module) {
+  private static List<CannotLink> undefinedIdentifiers(Module module) {
     var definedIdentifiers = module.definitions.stream()
         .map(definition -> definition.identifier)
         .collect(toSet());
@@ -49,10 +46,11 @@ public class VerifyModule {
             .flatMap(filter(Identifier.class))
             .filter(identifier -> !definedIdentifiers.contains(identifier))
             .map(identifier -> undefinedImport(definition, identifier)))
-        .collect(toList());
+        .map(problem -> (CannotLink) problem)
+        .toList();
   }
 
-  private static List<DuplicatedDefinition> duplicatedDefinitions(Module module) {
+  private static List<CannotLink> duplicatedDefinitions(Module module) {
     var histogram = module.definitions.stream()
         .map(definition -> definition.identifier)
         .collect(groupingBy(identity(), counting()));
@@ -60,6 +58,7 @@ public class VerifyModule {
         .filter(entry -> entry.getValue() > 1)
         .map(entry -> entry.getKey())
         .map(DuplicatedDefinition::duplicatedDefinition)
-        .collect(toSequence());
+        .map(problem -> (CannotLink) problem)
+        .toList();
   }
 }
